click on button starts prediction of fixed tile

--- a/streamlit_app/Pipfile
+++ b/streamlit_app/Pipfile
@@ -8,6 +8,12 @@ streamlit = "*"
 streamlit-folium = "*"
 geemap = "*"
 earthengine-api = "*"
+torch = "*"
+torchvision = "*"
+torchaudio = "*"
+fvcore = "*"
+rasterio = "*"
+opencv-python = "*"
 
 [dev-packages]
 
